--- a/frontend/index.html
+++ b/frontend/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="topbar-right">
                 <button class="topbar-btn" id="usageBtn">Usage</button>
-                <span class="topbar-pill version">v2.0.3</span>
+                <span class="topbar-pill version">v2.0.4</span>
                 <span class="topbar-pill openai-pill">
                     <span class="openai-label">OpenAI:</span>
                     <span class="openai-value" id="creditsValue">Fetching...</span>
@@ -756,7 +756,9 @@ console.log(data.youtube_summary);</code></pre>
                     <label for="audioFile">Audio File * (MP3, WAV, M4A, OGG, FLAC)</label>
                     <div class="file-upload-container">
                         <input type="file" id="audioFile" accept=".mp3,.wav,.m4a,.ogg,.flac" style="display: none;" />
-                        <div style="display: flex; flex-direction: column; align-items: center; gap: 12px; width: 100%;">
+                        
+                        <!-- Empty state - shown when no file is selected -->
+                        <div class="file-upload-empty" id="fileUploadEmpty">
                             <button type="button" class="btn btn-secondary" id="selectAudioBtn">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;">
                                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
@@ -766,7 +768,30 @@ console.log(data.youtube_summary);</code></pre>
                                 Select Audio File
                             </button>
                             <span style="color: var(--text-secondary); font-size: 0.85rem; text-align: center;">or drag and drop your file here</span>
-                            <span id="audioFileName" class="file-name-display">No file selected</span>
+                        </div>
+                        
+                        <!-- Selected state - shown when file is selected -->
+                        <div class="file-upload-selected" id="fileUploadSelected" style="display: none;">
+                            <div class="file-info">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="file-icon">
+                                    <path d="M9 18V5l12-2v13"></path>
+                                    <circle cx="6" cy="18" r="3"></circle>
+                                    <circle cx="18" cy="16" r="3"></circle>
+                                </svg>
+                                <div class="file-details">
+                                    <span id="audioFileName" class="file-name"></span>
+                                    <span id="audioFileSize" class="file-size"></span>
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-danger-outline" id="removeAudioBtn" title="Remove file">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <polyline points="3 6 5 6 21 6"></polyline>
+                                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                    <line x1="10" y1="11" x2="10" y2="17"></line>
+                                    <line x1="14" y1="11" x2="14" y2="17"></line>
+                                </svg>
+                                Remove
+                            </button>
                         </div>
                     </div>
                 </div>
